Sketch Preview && fixed amount input overflowing problem in firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,8 +5,13 @@
   height: 100vh;
   &--container {
     @include media-breakpoint-up($md) {
+      max-width: 1024px;
+      @include mx(auto);
+      @include px(1rem);
+      margin-top: 4rem;
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      gap: 4rem;
     }
   }
 }
