--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -62,7 +62,7 @@ $h-nav: 5rem;
 
     &:hover::after,
     &.current::after {
-      width: 100%;
+      width: 120%;
     }
   }
 
