--- a/src/components/Slider.scss
+++ b/src/components/Slider.scss
@@ -1,12 +1,12 @@
 @import "../mixin.scss";
 
-.LightBox {
+.Slider {
   &__preview {
     position: relative;
     overflow-x: hidden;
     &--imgs {
       display: grid;
-      grid-template-columns: repeat(3, 100%);
+      grid-template-columns: repeat(4, 100%);
       transition: transform 200ms;
     }
     &--img {
@@ -50,6 +50,6 @@
 }
 
 @include media-breakpoint-up($md) {
-  .LightBox {
+  .Slider {
   }
 }
